src/test/ui/consts/const_let_refutable.stderr
error[E0005]: refutable pattern in function argument: `&[]`, `&[_]` and `&[_, _, _, ..]` not covered
  --> $DIR/const_let_refutable.rs:3:16
   |
LL | const fn slice(&[a, b]: &[i32]) -> i32 {
   |                ^^^^^^^ patterns `&[]`, `&[_]` and `&[_, _, _, ..]` not covered

error[E0723]: loops and conditional expressions are not stable in const fn
  --> $DIR/const_let_refutable.rs:3:17
   |
LL | const fn slice(&[a, b]: &[i32]) -> i32 {
   |                 ^^^^^^
   |
   = note: for more information, see issue https://github.com/rust-lang/rust/issues/57563
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0005, E0723.
For more information about an error, try `rustc --explain E0005`.
